@@ -56,7 +56,7 @@ include an empty one for you.)</p>
     <td align="center" valign="top"><b>Required</b></td>
   </tr>
   <tr>
-    <td valign="top">jarfile</td>
+    <td valign="top">file</td>
     <td valign="top">the jar-file to create.</td>
     <td valign="top" align="center">Yes</td>
   </tr>
@@ -138,17 +138,17 @@ end up in the <code>META-INF</code> directory of the jar file. If this
 fileset includes a file named <code>MANIFEST.MF</code>, the file is
 ignored and you will get a warning.</p>
 <h3>Examples</h3>
-<pre>  &lt;jar jarfile=&quot;${dist}/lib/app.jar&quot; basedir=&quot;${build}/classes&quot;/&gt;</pre>
+<pre>  &lt;jar file=&quot;${dist}/lib/app.jar&quot; basedir=&quot;${build}/classes&quot;/&gt;</pre>
 <p>jars all files in the <code>${build}/classes</code> directory into a file
 called <code>app.jar</code> in the <code>${dist}/lib</code> directory.</p>
-<pre>  &lt;jar jarfile=&quot;${dist}/lib/app.jar&quot;
+<pre>  &lt;jar file=&quot;${dist}/lib/app.jar&quot;
        basedir=&quot;${build}/classes&quot;
        excludes=&quot;**/Test.class&quot;
   /&gt;</pre>
 <p>jars all files in the <code>${build}/classes</code> directory into a file
 called <code>app.jar</code> in the <code>${dist}/lib</code> directory. Files
 with the name <code>Test.class</code> are excluded.</p>
-<pre>  &lt;jar jarfile=&quot;${dist}/lib/app.jar&quot;
+<pre>  &lt;jar file=&quot;${dist}/lib/app.jar&quot;
        basedir=&quot;${build}/classes&quot;
        includes=&quot;mypackage/test/**&quot;
        excludes=&quot;**/Test.class&quot;
@@ -157,7 +157,7 @@ with the name <code>Test.class</code> are excluded.</p>
 called <code>app.jar</code> in the <code>${dist}/lib</code> directory. Only
 files under the directory <code>mypackage/test</code> are used, and files with
 the name <code>Test.class</code> are excluded.</p>
-<pre>  &lt;jar jarfile=&quot;${dist}/lib/app.jar&quot;&gt;
+<pre>  &lt;jar file=&quot;${dist}/lib/app.jar&quot;&gt;
     &lt;fileset dir=&quot;${build}/classes&quot;
              excludes=&quot;**/Test.class&quot;
     /&gt;
